# ColonyAgents

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  HANDOFF.md  LICENSE  README.md  README_zh.md  SPEC.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_providers.py  003_skills_mcp.py  004_agents.py  005_projects.py  006_sessions.py  (+72 more)
backend/app/: __init__.py  main.py
backend/scripts/: batch_scenarios.sh  e2e_auth_perspectives.py  e2e_full.py  e2e_image_binding_probe.py  eval_builder.py  eval_harness.py  eval_reset.sh  trial_supers.sh
backend/tests/: conftest.py  test_adr008_approval_wechat_format.py  test_adr008_builder_spec_validation.py  test_adr008_factory_gates.py  test_adr008_wechat_router_policy.py  test_adr009_builder_claim.py  test_adr009_claim_service.py  test_adr009_cross_super_block.py  test_adr009_skill_template.py  test_adr009_worker_change_impact.py  test_adr025_approval_pause.py  test_adr025_dispatcher.py  test_adr025_resume_waiters.py  test_adr025_run_to_completion.py  test_adr025_work_order.py  test_agent_default_model_resolution.py  test_agent_schema_max_iterations.py  test_agents.py  test_approval_judge_integration.py  test_approval_judge_protocol_snippet.py  test_approval_judge_worker.py  test_approval_serialize.py  test_auth.py  test_auto_approve_pick.py  test_auto_approve_resolve.py  test_aux_model_binding_loop.py  test_bg_tasks.py  test_build_finalizer.py  test_builder_aux_bind_footgun.py  test_builder_default_auto_approve_seed.py  test_builder_design_brief.py  test_builder_image_bind_reuse_gate.py  test_builder_pipeline_cleanup.py  test_builder_single_mission_invariant.py  test_cascade_skips_system_agent.py  test_clawhub_query_fallback.py  test_clawhub_retry.py  test_compression_thread.py  test_current_step_clip.py  test_d2_builder_startup_command_rule.py  (+117 more)
(+356 files in other folders)
