[project]
name = "colony-backend"
version = "0.1.0"
description = "Colony 后端服务"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.4.0",
    "alembic>=1.18.4",
    "apscheduler>=3.10",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0,<5.0",
    "croniter>=2.0",
    "cryptography>=46.0.7",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-litellm>=0.6.4",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "litellm>=1.83.8",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",    # 行长度由 format 处理
    "B008",    # FastAPI Depends() 默认参数
    "RUF001",  # 允许中文全角标点
    "RUF002",  # 允许中文全角标点（docstring）
    "RUF003",  # 允许中文全角标点（comment）
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
